--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
         "bluebird": "^3.7.2",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "md5": "^2.3.0",
         "sqlite3": "^5.0.0"
     },
     "scripts": {
-        "start": "node index"
+        "start": "node index.js",
+        "dev": "nodemon --watch . index.js"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
     }
 }
